--- a/backend/package.json
+++ b/backend/package.json
@@ -11,24 +11,24 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@babel/cli": "7.15.7",
-    "@babel/core": "7.15.5",
-    "@babel/node": "7.15.4",
-    "@babel/preset-env": "7.15.6",
-    "bcrypt": "5.0.1",
-    "connect-history-api-fallback": "1.6.0",
-    "cors": "2.8.5",
-    "express": "4.17.1",
-    "jsonwebtoken": "8.5.1",
-    "mongoose": "6.0.8",
-    "mongoose-unique-validator": "3.0.0",
-    "morgan": "1.10.0",
-    "underscore": "1.13.1"
+    "@babel/cli": "~7.15.7",
+    "@babel/core": "~7.15.5",
+    "@babel/node": "~7.15.4",
+    "@babel/preset-env": "~7.15.6",
+    "bcrypt": "~5.0.1",
+    "connect-history-api-fallback": "~1.6.0",
+    "cors": "~2.8.5",
+    "express": "~4.17.1",
+    "jsonwebtoken": "^9.0.1",
+    "mongoose": "^6.11.5",
+    "mongoose-unique-validator": "~3.0.0",
+    "morgan": "~1.10.0",
+    "underscore": "~1.13.1"
   },
   "devDependencies": {
-    "@babel/cli": "7.15.7",
-    "@babel/core": "7.15.5",
-    "@babel/node": "7.15.4",
-    "@babel/preset-env": "7.15.6"
+    "@babel/cli": "~7.15.7",
+    "@babel/core": "~7.15.5",
+    "@babel/node": "~7.15.4",
+    "@babel/preset-env": "~7.15.6"
   }
 }
